--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.2.0",
     "gridstack": "^9.0.0",
     "mdb-react-ui-kit": "^6.2.0",
+    "mdb-ui-kit": "^6.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
