--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@react-icons/all-files": "^4.1.0",
     "@syncfusion/ej2-react-schedule": "^22.2.8",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,10 +13,6 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.3",
     "dateformat": "^5.0.3",
-    "firebase": "^10.2.0",
-    "gridstack": "^9.0.0",
-    "mdb-react-ui-kit": "^6.2.0",
-    "mdb-ui-kit": "^6.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
