--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-roadmap-progress": "^1.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "router": "^1.3.8",
     "semver": "^7.5.4",
